more pics, finnur.se

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -230,9 +230,9 @@
 		</div>
 	</div>
   
-	<div class="container-fluid">
+	<!--<div class="container-fluid">
 	<div class="span3 alert alert-info" id="msgBox" style="top:10%;right:3%;position:fixed;z-index:100;display:none;"></div>
-	</div>
+	</div>-->
   
     <%- body %>
 	
