pics, sponsors, mailing

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -220,18 +220,18 @@
 						<% })} %>
 					</ul>
 					
-					<ul class="nav pull-right">
+					<!--<ul class="nav pull-right">
 					<li class="dropdown">
 					  <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <b class="caret"></b></a>
 					  <ul class="dropdown-menu">
-						<!--<li><a href="http://www.in1.com">In1</a></li>-->
+						<li><a href="http://www.in1.com">In1</a></li>
 						<li><a href="/admin">Admin</a></li>
 						<li class="divider"></li>
 						<li><a href="#About">About</a></li>
 					  </ul>
 					</li>
 					
-					</ul>
+					</ul>-->
 
 				</div>
 			</div>
