--- a/views/index.ejs
+++ b/views/index.ejs
@@ -297,8 +297,7 @@
         <h1>Vad är Kidscraft?</h1>
 
         <p>Är du mellan 8 och 15 år? Vi skapar, samarbetar och bygger i ett av de mest kreativa spel som finns just nu.
-            Kom och
-            spela Minecraft med 100 andra kids under 5 timmar på Stpln!</p>
+            Kom och spela Minecraft med 100 andra kids under 5 timmar på Stapeln.</p>
 
         <p>För att delta behöver du ett Minecraft-konto och en dator att spela på och vara mellan 9-15 år.
             Välkommen!</p>
@@ -372,13 +371,14 @@
         <div class="span12 pull-center">
             <div class="span2  offset1">
                 <a href="http://www.spelkultur.nu" target="_blank"><img class="thumbnail pull-center"
-                     src='http://www.spelkultur.nu/wp-content/uploads/2013/02/Spelkultur_Logo_RGB_Wide_TransparentBG1.png'/></a>
+                                                                        src='http://www.spelkultur.nu/wp-content/uploads/2013/02/Spelkultur_Logo_RGB_Wide_TransparentBG1.png'/></a>
             </div>
             <div class="span2">
                 <a href="http://stpln.se/" target="_blank"><img class="thumbnail pull-center" src='/img/stpln.png'/></a>
             </div>
             <div class="span2">
-                <a href="http://cityskane.se/malmo/" target="_blank"><img class="thumbnail pull-center" src='/img/city.png'/></a>
+                <a href="http://cityskane.se/malmo/" target="_blank"><img class="thumbnail pull-center"
+                                                                          src='/img/city.png'/></a>
             </div>
             <div class="span2">
                 <a href="http://sydsvenskan.se" target="_blank"><img class="thumbnail pull-center" src='/img/sds.png'/></a>
