--- a/views/index.ejs
+++ b/views/index.ejs
@@ -299,7 +299,7 @@
         <p>Är du mellan 8 och 15 år? Vi skapar, samarbetar och bygger i ett av de mest kreativa spel som finns just nu.
             Kom och spela Minecraft med 100 andra kids under 5 timmar på Stapeln.</p>
 
-        <p>För att delta behöver du ett Minecraft-konto och en dator att spela på och vara mellan 9-15 år.
+        <p>För att delta behöver du ett Minecraft-konto och en dator att spela på och vara mellan 8-15 år.
             Välkommen!</p>
 
         <h2>När?</h2>
@@ -314,7 +314,7 @@
 
         <p>Anmäl dig här</p>
 
-        <div style="pull´center width:195px; text-align:center;">
+        <div style="pull-center width:195px; text-align:center;">
             <iframe src="http://www.eventbrite.com/countdown-widget?eid=577891489" frameborder="0" height="394"
                     width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe>
             <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:195px; text-align:center;">
