rules and reminders

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,14 +293,39 @@
 <section id="Vad" class="sec sec2 fill">
     <h2></h2>
 
-    <div class="span6 pull-center">
+    <div class="span6 pull-center" style="text-align: left;">
         <h1>Vad är Kidscraft?</h1>
 
         <p>Är du mellan 8 och 15 år? Vi skapar, samarbetar och bygger i ett av de mest kreativa spel som finns just nu.
-            Kom och spela Minecraft med 100 andra kids under 5 timmar på Stapeln.</p>
+            Kom och spela Minecraft med 100 andra barn under 5 timmar på Stapeln.</p>
 
-        <p>För att delta behöver du ett Minecraft-konto och en dator att spela på och vara mellan 8-15 år.
-            Välkommen!</p>
+        <p>
+            KOM IHÅG: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du göra här:
+            <a href="https://minecraft.net/store">https://minecraft.net/store</a> och kostar cirka 200 kronor. Kan du av någon anledning inte registrera dig där,
+            låt oss <a href="#Kontakt">veta</a> så ska vi försöka lösa det till er, men vi kan inte lova något.
+        </p>
+        <h2>
+            Glöm inte att ta med
+        </h2>
+        <ul>
+
+            <li>din egen <b>dator</b> (Har du inte en egen dator? Hör av dig så fort du kan genom att mejla oss!)</li>
+            <li>din <b>Minecraft-login</b></li>
+            <li>gärna en egen <b>förgreningskontakt</b> om du har en sån hemma!</li>
+            <li>om du har, en Ethernet <b>nätsladd</b> så att du får snabbara nätverk än om du surfar trådlöst.</li>
+        </ul>
+        
+        <h2>Regler</h2>
+        <ul>
+            <li>Inget griefande</li>
+            <li>Spela bara minecraft, inga andra internet-spel</li>
+            <li>Använd bara de världar som finns uppsatta, inte dina egna, eftersom annars du tar med dig världen när du går.</li>
+        </ul>
+
+        <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en <a href="bukkit.org">Bukkit</a>
+            Server?),
+            byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig med!
+        </p>
 
         <h2>När?</h2>
 
