adding images, and ICA etc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -296,14 +296,50 @@
     <div class="span6 pull-center" style="text-align: left;">
         <h1>Vad är Kidscraft?</h1>
 
-        <p>Är du mellan 8 och 15 år? Vi skapar, samarbetar och bygger i ett av de mest kreativa spel som finns just nu.
-            Kom och spela Minecraft med 100 andra barn under 5 timmar på Stapeln.</p>
+        <p>Den 24e augusti smäller det! Kidscraft är LAN:et där 100 av Malmös craftigaste kids mellan 8 - 15 år träffas
+            för att skapa nya världar tillsammans i ett av världens bästa spel. Kidscraft kommer att hållas på Stpln i
+            Malmö. Eventet är helt gratis men kräver att du registrerar dig, tar med dig egen dator och
+            Minecraft-användare (https://minecraft.net/store). Observera att det finns ett begränsat antal platser.
+            Anmäl dig idag! </p>
 
         <p>
             KOM IHÅG: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du göra här:
-            <a href="https://minecraft.net/store">https://minecraft.net/store</a> och kostar cirka 200 kronor. Kan du av någon anledning inte registrera dig där,
-            låt oss <a href="#Kontakt">veta</a> så ska vi försöka lösa det till er, men vi kan inte lova något.
+            <a href="https://minecraft.net/store">https://minecraft.net/store</a>.
         </p>
+
+        <h1>Varför arrangerar vi Kidscraft?</h1>
+
+        <p>Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar över 80
+            procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt få
+            LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa
+            andra datorintresserade i sin egen ålder. Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg
+            LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus.
+        </p>
+
+        <p>För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan vara.
+            Men tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt rykte i
+            media och betraktas fortfarande med föräldravärldens skepsis. I den egenskapen är Kidscraft är ett
+            pioniärprojekt. Ett projekt som går ut på att visa att spel kan användas för att främja kreativitet och
+            samarbete. Som kan uppmärksamma föräldrar, kritiker och beslutsfattare om behovet av alternativa
+            mötesplatser för barn och vikten av att utgå ifrån ungas egna intressen för att stimulera informella
+            demokrati- och läroprocesser.
+        </p>
+
+        <h1> Varför Minecraft?</h1>
+
+        <p>Minecraft var ett världsfenomen redan innan spelet hade lanserats. Den öppna spelvärlden i kombination med
+            ett
+            enkelt system för att skapa, utvecklas och uppleva äventyr, erbjuder spelare möjligheten att uttrycka sig
+            kreativt samtidigt som de kan ha roligt och skapa tillsammans med andra. En kombination som utan tvekan
+            gjort
+            Minecraft till ett av världens mest populära spel.</p>
+
+        <p>Minecraft har till skillnad från många andra spel en låg åldersgräns, är lätt att sätta sig in i och ett
+            upplägg
+            som uppmuntrar till samarbete och kreativitet. Faktorer som gör att Minecraft lämpar sig väldigt väl för att
+            arbeta med barn och unga. Det är också ett exemplariskt verktyg för att visa på informella läroprocesser.
+        </p>
+
         <h2>
             Glöm inte att ta med
         </h2>
@@ -314,17 +350,21 @@
             <li>gärna en egen <b>förgreningskontakt</b> om du har en sån hemma!</li>
             <li>om du har, en Ethernet <b>nätsladd</b> så att du får snabbara nätverk än om du surfar trådlöst.</li>
         </ul>
-        
+
         <h2>Regler</h2>
         <ul>
             <li>Inget griefande</li>
             <li>Spela bara minecraft, inga andra internet-spel</li>
-            <li>Använd bara de världar som finns uppsatta, inte dina egna, eftersom annars du tar med dig världen när du går.</li>
+            <li>Använd bara de världar som finns uppsatta, inte dina egna, eftersom annars du tar med dig världen när du
+                går.
+            </li>
         </ul>
 
-        <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en <a href="bukkit.org">Bukkit</a>
+        <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en <a
+                href="bukkit.org">Bukkit</a>
             Server?),
-            byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig med!
+            byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
+            med!
         </p>
 
         <h2>När?</h2>
@@ -384,6 +424,35 @@
                     href='http://se.linkedin.com/pub/marie-neubauer/26/b79/402' target='_blank'>Marie Neubauer</a>
             </div>
         </div>
+    </div>
+    <div class="container">
+        <div class="span12 pull-center">
+            <div class="span2 offset2">
+                <img class="thumbnail img-rounded"
+                     src='/img/SiSk-Portraits_Adrian.jpg'/>
+
+                <h3>Adrian Löwander</h3>
+                <a
+                        href='http://www.spelkultur.nu' target='_blank'>Spelkultur</a>
+            </div>
+            <div class="span2">
+                <img class="thumbnail img-rounded"
+                     src='/img/SiSk-Portraits_Jonas.jpg'/>
+
+                <h3>Jonas</h3>
+                <a
+                        href='http://www.spelkultur.nu' target='_blank'>Spelkultur</a>
+            </div>
+            <div class="span2">
+                <img class="thumbnail img-rounded"
+                     src='/img/SiSk-Portraits_Thom.jpg'/>
+
+                <h3>Thom</h3>
+                <a
+                        href='http://www.spelkultur.nu' target='_blank'>Spelkultur</a>
+            </div>
+        </div>
+    </div>
 
 </section>
 <hr>
@@ -395,8 +464,9 @@
     <div class="container">
         <div class="span12 pull-center">
             <div class="span2  offset1">
-                <a href="http://www.spelkultur.nu" target="_blank"><img class="thumbnail pull-center"
-                                                                        src='http://www.spelkultur.nu/wp-content/uploads/2013/02/Spelkultur_Logo_RGB_Wide_TransparentBG1.png'/></a>
+                <a href="http://www.ica.se/butiker/maxi/malmo/maxi-ica-stormarknad-vastra-hamnen-11981/start/"
+                   target="_blank"><img class="thumbnail pull-center"
+                                        src='http://www.ica.se/ImageVaultFiles/id_48961/cf_259/maxi-ica-stormarknad-logotyp.PNG?'/></a>
             </div>
             <div class="span2">
                 <a href="http://stpln.se/" target="_blank"><img class="thumbnail pull-center" src='/img/stpln.png'/></a>
@@ -404,6 +474,21 @@
             <div class="span2">
                 <a href="http://cityskane.se/malmo/" target="_blank"><img class="thumbnail pull-center"
                                                                           src='/img/city.png'/></a>
+            </div>
+            <div class="span2">
+                <a href="http://spelkultur.nu/" target="_blank"><img class="thumbnail pull-center" src='http://www.spelkultur.nu/wp-content/uploads/2013/02/Spelkultur_Logo_RGB_Wide_TransparentBG1.png'/></a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="span12 pull-center">
+            <div class="span2 offset1">
+                <a href="http://www.studieframjandet.se/" target="_blank"><img class="thumbnail pull-center"
+                                                                               src='http://www.studieframjandet.se/Global/Riksf%C3%B6rbundet/Headers/sfr-logo.png'/></a>
+            </div>
+            <div class="span2">
+                <a href="http://neo4j.org" target="_blank"><img height="" class="thumbnail pull-center"
+                                                                src='http://www.neotechnology.com/wp-content/themes/Neo_Technology/images/Neo_Technology_Logo.png'/></a>
             </div>
             <div class="span2">
                 <a href="http://sydsvenskan.se" target="_blank"><img class="thumbnail pull-center" src='/img/sds.png'/></a>
