--- a/views/index.ejs
+++ b/views/index.ejs
@@ -439,6 +439,23 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="span12 pull-center">
+            <div class="span2 offset2">
+                <img class="thumbnail img-rounded"
+                     src='/img/magnus.jpg'/>
+
+                <h3>Magnus Robertsson</h3>
+                <a
+                        href='http://se.linkedin.com/in/magnusrobertsson/' target='_blank'>LinkedIn</a>
+            </div>
+            <div class="span2">
+                
+            </div>
+            <div class="span2">
+            </div>
+        </div>
+    </div>
 
 </section>
 <hr>
